find user route completed
